# generix_demo

./: .gitignore
analyst_generix/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
analyst_generix/src/analyst_generix/: Database Analysis.md  __init__.py  crew.py  main.py
analyst_generix/src/analyst_generix/agents/: database_agents.py
analyst_generix/src/analyst_generix/config/: agents.yaml  tasks.yaml
analyst_generix/src/analyst_generix/tasks/: database_tasks.py
analyst_generix/src/analyst_generix/tools/: mysql_tools.py
