[project]
name = "analyst_generix"
version = "0.1.0"
description = "Analyst_generix using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
analyst_generix = "analyst_generix.main:run"
run_crew = "analyst_generix.main:run"
train = "analyst_generix.main:train"
replay = "analyst_generix.main:replay"
test = "analyst_generix.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
